2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-07-09  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* encodings/.cvsignore:
	* encodings/large/.cvsignore:
	* src/.cvsignore:
	Add .cvsignore files
	
	* configure.ac:
	Depend on xproto, not x11 so we do not link against -X11

2005-06-30  Alexander Gottwald  <ago at freedesktop dot org>

	* configure.ac:
	Check for zlib