@@ -6,6 +6,5 @@ includedir=@includedir@
 Name: fontenc
 Description: The fontenc Library
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @FONTENC_CFLAGS@
-Libs: -L${libdir} -lfontenc @FONTENC_LIBS@
-
+Cflags: -I${includedir}
+Libs: -L${libdir} -lfontenc
